<resources>
    <!--Nom de l'appli-->
    <string name="app_name">Projet Android</string>

    <string name="navigation_menu_open">Open menu drawer</string>
    <string name="navigation_menu_close">Close menu drawer</string>

    <string name="action_settings">Settings</string>

    <!--String du menu de droite-->
    <string name="rightpannel_title">Movie Finder</string>
    <string name="rightpannel_search">Search</string>
    <string name="rightpannel_top">Top movie</string>
    <string name="rightpannel_recent">Upcomming movie</string>
    <string name="rightpannel_actuellement">Actually in theater</string>
    <string name="rightpannel_consulterecament">Recently Viewed</string>
    <string name="rightpannel_favoris">Favorite Movie</string>


    <!--String du menu de recherche-->
    <string name="searchlayout_principal_title">Search your movie</string>
    <string name="searchlayout_title_text">Title</string>
    <string name="searchlayout_title_edittext">Title</string>
    <string name="searchlayout_maxresult_text">Number of result</string>
    <string name="searchlayout_maxage_text">Maximum age of the movie(optionnal)</string>
    <string name="searchlayout_country_text">The original language of the movie</string>
    <string name="searchlayout_country_default_prompt">Choose a Language</string>
    <string-array name="searchlayout_country_choice">
        <item>All</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
    </string-array>
    <string name="searchlayout_popularity_text">Minimum popularity : 0.0</string>
    <string name="searchlayout_launch_button">Search</string>


    <string name="film_detail">Movie Information</string>
</resources>
