<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/rightpannel_search" />
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/top_icon"
            android:title="@string/rightpannel_top" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/receent_icon"
            android:title="@string/rightpannel_recent" />

        <item
            android:id="@+id/nav_viewed"
            android:icon="@drawable/receent_icon"
            android:title="@string/rightpannel_consulterecament" />
    </group>

</menu>
